Correct algos and add README.md