@@ -1,4 +1,3 @@
-import com.google.common.collect.Sets;
 import kripke.Kripke;
 import kripke.util.KripkeFactory;
 import kripke.State;
@@ -11,6 +10,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 /**
  * KripkeFactory Tester.
@@ -23,27 +23,35 @@ public class KripkeFactoryTest {
 
     private Kripke kripke;
 
+    private Kripke kripke1;
+
     @BeforeEach
     public void setup() {
-        State s0 = new State("s0", true, Arrays.asList("a", "b"));
-        State s1 = new State("s1", Arrays.asList("b"));
-        State s2 = new State("s2", Arrays.asList("b"));
-        State s3 = new State("s3", Arrays.asList("c"));
+        State s0 = new State("s0", Arrays.asList("c"));
+        State s1 = new State("s1", List.of("a"));
+        State s2 = new State("s2", List.of("a","b"));
+        State s3 = new State("s3", List.of("b"));
+        State s4 = new State("s4", List.of("b"));
+
 
         Kripke kripke = new Kripke();
 
-        kripke.setVals(Sets.newHashSet("a", "b", "c"));
+        kripke.setVals(Set.of("a", "b", "c"));
         kripke.addInitState(s0);
-        kripke.setStates(Sets.newHashSet(s0, s1, s2, s3));
+        kripke.addInitState(s3);
+        kripke.setStates(Set.of(s0, s1, s2, s3,s4));
+        kripke.addTransition(s0, s4);
         kripke.addTransition(s0, s1);
-        kripke.addTransition(s0, s2);
-        kripke.addTransition(s1, s1);
         kripke.addTransition(s1, s2);
-        kripke.addTransition(s2, s0);
         kripke.addTransition(s2, s3);
-        kripke.addTransition(s3, s1);
+        kripke.addTransition(s3, s3);
+        kripke.addTransition(s3, s0);
+        kripke.addTransition(s4, s4);
 
         this.kripke = kripke;
+
+
+
     }
 
     /**
@@ -51,18 +59,8 @@ public class KripkeFactoryTest {
      */
     @Test
     public void testReadKripkeFromJson() throws Exception {
-        Kripke kripke = KripkeFactory.build("src/test/resources/testOutPut.json");
-//        BufferedWriter bufferedWriter = Files.newBufferedWriter(Path.of("src/test/resources/atoms.json"));
-//        State state = new State("s1", Arrays.asList("b"));
-//        bufferedWriter.write(new ObjectMapper().writeValueAsString(state));
-//        bufferedWriter.close();
-//        BufferedReader bufferedReader = Files.newBufferedReader(Path.of("src/test/resources/atoms.json"));
-//        State atom = new ObjectMapper().readValue(bufferedReader,State.class);
-//        System.out.println(atom);
-
+        Kripke kripke = KripkeFactory.build("src/test/resources/kriple2.json");
         List<State> states = new ArrayList<>(kripke.getStates());
-        System.out.println(states);
-        System.out.println(states.get(0).getAtoms());
     }
 
     /**
@@ -71,7 +69,7 @@ public class KripkeFactoryTest {
     @Test
     public void testWriteKripkeToJson() throws Exception {
         String output = KripkeFactory.write(kripke);
-        BufferedWriter bufferedWriter = Files.newBufferedWriter(Path.of("src/test/resources/testOutPut.json"));
+        BufferedWriter bufferedWriter = Files.newBufferedWriter(Path.of("src/test/resources/kriple2.json"));
 
         bufferedWriter.write(output);
         bufferedWriter.close();
